# Experiments

./: README.md
Lab1-2048-Framework/: CMakeLists.txt
Lab1-2048-Framework/include/: Game.h  GameBoard.h  GameRender.h  InputHandler.h
Lab1-2048-Framework/src/: Game.cpp  GameBoard.cpp  GameRender.cpp  InputHandler.cpp  main.cpp
